--- a/assets/polish.css
+++ b/assets/polish.css
@@ -6,6 +6,7 @@ body {
 
 /* textarea.description */
 textarea {
+  /* background: purple; */
   background: transparent;
   border: none;
   resize: none;
@@ -28,13 +29,13 @@ textarea {
   white-space: pre-wrap;
 }
 
-/* timeblock */
+/* timeblock - YES */
 .time-block {
   text-align: center;
   border-radius: 15px;
 }
 
-/* timeblock row */
+/* timeblock row - YES */
 .row {
   white-space: pre-wrap;
   height: 80px;
@@ -43,8 +44,8 @@ textarea {
 
 /* hour of the day on planner */
 .hour {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: plum;
+  color: darkslategrey;
   border-top: 1px dashed #000000;
 }
 
